fix: widen row-gap

--- a/src/App.css
+++ b/src/App.css
@@ -194,6 +194,7 @@ h3:hover {
   main {
     width: 730px;
     grid-template-columns: repeat(2, 1fr);
+    row-gap: 3rem;
   }
 }
 
